[package]
name = "rs9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
indoc = "2.0.4"
poise = "0.6.1" 
regex = "1.10.3"
reqwest = "0.11.26"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
serenity = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
